--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  flutter_svg: ^1.0.0
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.6 
@@ -20,3 +21,17 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+  
+  assets:
+    - assets/images/welcome/1.svg
+    - assets/images/welcome/2.svg
+    - assets/images/welcome/3.svg
