--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   bloc: ^8.1.4
   flutter_svg: ^1.0.0
+  flutter_form_builder: ^9.5.0
+  form_builder_validators: ^11.0.0
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.6 
