--- a/.env.dist
+++ b/.env.dist
@@ -2,7 +2,8 @@ PROJECT_NAME="GameOn!"
 STACK_NAME=game-on
 
 SECRET_KEY=
-FIRST_SUPERUSER=
+FIRST_SUPERUSER_USERNAME=
+FIRST_SUPERUSER_EMAIL=
 FIRST_SUPERUSER_PASSWORD=
 
 POSTGRES_SERVER=localhost
